scenarios/missing-storage-class-scenario.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: anthos-bank
  labels:
    application: bank-of-anthos
    environment: development
    team: compliance
    tier: backend
  name: transactions-audit-log
spec:
  serviceName: transactions-audit-log
  replicas: 1
  selector:
    matchLabels:
      app: transactions-audit-log
      application: bank-of-anthos
      environment: development
      team: compliance
      tier: backend
  template:
    metadata:
      labels:
        app: transactions-audit-log
        application: bank-of-anthos
        environment: development
        team: compliance
        tier: backend
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
        - env:
            - name: DD_SERVICE
              value: transactions-audit-log
            - name: DD_ENV
              value: evaluation-poc-cluster
            - name: VERSION
              value: v0.6.8
            - name: PORT
              value: "8080"
            - name: LOG_LEVEL
              value: info
            - name: AUDIT_LOG_PATH
              value: /var/log/audit
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/loadgenerator:v0.6.8@sha256:a12f8c6ec8bd59b607a12b63810f2512ef6f58284cbca38b32c70e85970dc455
          name: transactions-audit-log
          ports:
            - containerPort: 8080
              name: http-server
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 250m
              ephemeral-storage: 0.5Gi
              memory: 128Mi
            requests:
              cpu: 100m
              ephemeral-storage: 0.5Gi
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: audit-data
              mountPath: /var/log/audit
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: audit-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: high-iops-rwo
      resources:
        requests:
          storage: 1Gi
