scenarios/wrong-sa-scenario.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: anthos-bank
  labels:
    application: bank-of-anthos
    environment: development
    team: security
    tier: backend
  name: riskassessment
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: riskassessment
    application: bank-of-anthos
    environment: development
    team: security
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: anthos-bank
  labels:
    application: bank-of-anthos
    environment: development
    team: security
    tier: backend
  name: riskassessment
spec:
  selector:
    matchLabels:
      app: riskassessment
      application: bank-of-anthos
      environment: development
      team: security
      tier: backend
  template:
    metadata:
      labels:
        app: riskassessment
        application: bank-of-anthos
        environment: development
        team: security
        tier: backend
    spec:
      serviceAccountName: risk-assessment
      terminationGracePeriodSeconds: 5
      containers:
        - env:
            - name: DD_SERVICE
              value: riskassessment
            - name: DD_ENV
              value: evaluation-poc-cluster
            - name: VERSION
              value: v0.6.8
            - name: PORT
              value: "8080"
            - name: LOG_LEVEL
              value: info
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/balancereader:v0.6.8@sha256:3cf7a5c45112fe8e9c5ca30ff25a66c4c0bbdb6e03ecc42f2e6f79bf17d7d6e8
          name: riskassessment
          ports:
            - containerPort: 8080
              name: http-server
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 250m
              ephemeral-storage: 0.5Gi
              memory: 128Mi
            requests:
              cpu: 100m
              ephemeral-storage: 0.5Gi
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - emptyDir: {}
          name: tmp
